Fixed contrast issue with results in standard theme

--- a/src/sample/app/css/dark.css
+++ b/src/sample/app/css/dark.css
@@ -32,6 +32,10 @@
     -fx-text-fill: #C1C7C9;
 }
 
+.sub_text3 {
+    -fx-text-fill: #C1C7C9;
+}
+
 /* Table Containers */
 .result {
     -fx-background-color: rgba(255, 255, 255, 0.06);
